--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -402,8 +402,8 @@ p {
 #epic-home { 
 	min-height: 700px;
   background: $brand-white url(../images/loader.gif) no-repeat center center ;
-  background-image: linear-gradient(to bottom right,#002f4b,#dc4225);
-	opacity: .6; 
+  //background-image: linear-gradient(to bottom right,#002f4b,#dc4225);
+//	opacity: .6; 
   
   
   /*---------------------------------------
@@ -436,7 +436,6 @@ p {
 			top: 50%;
 			margin-top: -129px;
 			text-align: center;
-			
 
 			@media screen and (max-width: $screen-sm) {
 				// margin-top: -66px;
